objects/GEMS_Request_Resources__c.object
<CustomObject>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GEMS Request Resources</relationshipLabel>
        <relationshipName>GEMS_Request_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner/Queue</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Request_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Request_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GEMS Request Resources</label>
    <nameField>
        <label>GEMS Request Resources Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Request Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>